Fixed contrast issues with prophets page

--- a/week2/styles/prophets.css
+++ b/week2/styles/prophets.css
@@ -12,7 +12,7 @@ body {
     min-width: 380px;
 }
 header {
-    background: #50b3a2;
+    background: #1f7f6f;
     color: #fff;
     padding: 10px 0;
     text-align: center;
@@ -42,9 +42,15 @@ header {
 }
 #cards h2 {
     margin-bottom: 10px;
-    color: #50b3a2;
+    color: #1f7f6f;
 }
 #cards p {
     font-size: 14px;
-    color: #666;
+    color: #000000;
+}
+footer {
+    text-align: center;
+    margin-top: 20px;
+    color: #000000;
+    font-size: 14px;
 }
